Update website content and rename Basin1 to PulseOne

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                         <a class="nav-link" href="https://thecitybits.com/" target="_blank">TheCityBits</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#basin1">Basin1</a>
+                        <a class="nav-link" href="index.html#pulseone">PulseOne</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
@@ -213,7 +213,7 @@
                 <a href="index.html">Home</a>
                 <a href="https://skyrovr.com/" target="_blank">Sky Rovr</a>
                 <a href="https://thecitybits.com/" target="_blank">TheCityBits</a>
-                <a href="index.html#basin1">Basin1</a>
+                <a href="index.html#pulseone">PulseOne</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact</a>
             </div>
