--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#citybits">TheCityBits</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#basin1">Basin1</a>
+                        <a class="nav-link" href="#pulseone">PulseOne</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About Us</a>
@@ -85,10 +85,10 @@
         </div>
     </section>
 
-    <!-- Basin1 Section -->
-    <section id="basin1" class="product-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
+    <!-- PulseOne Section -->
+    <section id="pulseone" class="product-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
         <div class="product-content fade-in">
-            <h2 class="text-white">Basin1</h2>
+            <h2 class="text-white">PulseOne</h2>
             <p class="text-white">Our guiding philosophy stands as a symbol for the future – a world where clean energy, rapid transportation, and intelligent systems are the norm.</p>
             <div class="hero-buttons">
                 <a href="#" class="btn btn-secondary-custom">Explore Our Vision</a>
@@ -101,7 +101,7 @@
         <div class="about-content fade-in">
             <h2>About Vision One Tech</h2>
             <p>Vision One Tech is the driving force behind Sky Rovr, pushing the boundaries of drone technology and autonomous systems. Founded with the vision of advancing humanity toward a Type 1 civilization within the next 80-100 years, Vision One Tech is dedicated to creating the technologies that will shape the future of transportation, robotics, and intelligent systems.</p>
-            <p>Our mission goes beyond drones – we are developing a wide range of high-tech solutions like flying cars, robotics, and advanced software platforms that seamlessly integrate into everyday life. Basin1, our guiding philosophy, stands as a symbol for this future – a world where clean energy, rapid transportation, and intelligent systems are the norm.</p>
+            <p>Our mission goes beyond drones – we are developing a wide range of high-tech solutions like flying cars, robotics, and advanced software platforms that seamlessly integrate into everyday life. PulseOne, our guiding philosophy, stands as a symbol for this future – a world where clean energy, rapid transportation, and intelligent systems are the norm.</p>
         </div>
     </section>
 
@@ -112,7 +112,7 @@
                 <a href="#">Home</a>
                 <a href="https://skyrovr.com/" target="_blank">Sky Rovr</a>
                 <a href="https://thecitybits.com/" target="_blank">TheCityBits</a>
-                <a href="#basin1">Basin1</a>
+                <a href="#pulseone">PulseOne</a>
                 <a href="#about">About Us</a>
                 <a href="contact.html">Contact</a>
             </div>
