Update index.html and add drone image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <!-- Sky Rovr Section -->
-    <section id="skyrovr" class="product-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1508614589041-895b88991e3e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
+    <section id="skyrovr" class="product-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/drone.jpeg');">
         <div class="product-content fade-in">
             <img src="images/skyrovr-logo.png" alt="Sky Rovr Logo" style="max-width: 200px; margin-bottom: 2rem;">
             <h2 class="text-white">Advanced Drone Technology</h2>
@@ -74,13 +74,13 @@
     </section>
 
     <!-- TheCityBits Section -->
-    <section id="citybits" class="product-section" style="background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
+    <section id="citybits" class="product-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
         <div class="product-content fade-in">
             <img src="images/thecitybits-logo.png" alt="TheCityBits Logo" style="max-width: 200px; margin-bottom: 2rem;">
-            <h2>Transform Your City Experience</h2>
-            <p>A super app designed to transform the way people interact with their cities, offering ride-hailing, professional bookings, and real-time city updates.</p>
+            <h2 class="text-white">Transform Your City Experience</h2>
+            <p class="text-white">A super app designed to transform the way people interact with their cities, offering ride-hailing, professional bookings, and real-time city updates.</p>
             <div class="hero-buttons">
-                <a href="https://thecitybits.com/" target="_blank" class="btn btn-primary-custom">Visit TheCityBits.com</a>
+                <a href="https://thecitybits.com/" target="_blank" class="btn btn-primary-custom" style="background-color: var(--accent-color); border: none;">Visit TheCityBits.com</a>
             </div>
         </div>
     </section>
